--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -49,6 +49,15 @@
         <action
             android:id="@+id/action_homeFragment_to_receiveFragment"
             app:destination="@id/receiveFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_transferReceiptFragment"
+            app:destination="@id/transferReceiptFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_transferReceiptFragment2"
+            app:destination="@id/transferReceiptFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_rechargeReceiptFragment2"
+            app:destination="@id/rechargeReceiptFragment" />
     </fragment>
     <navigation android:id="@+id/authentication"
         app:startDestination="@id/loginFragment">
@@ -178,7 +187,12 @@
     <fragment
         android:id="@+id/transferReceiptFragment"
         android:name="dev.airon.bankfinance.presentation.ui.features.transfer.TransferReceiptFragment"
-        android:label="TransferReceiptFragment" />
+        android:label="TransferReceiptFragment" >
+        <argument
+            android:name="transactionPix"
+            app:argType="dev.airon.bankfinance.domain.model.TransactionPix" />
+    </fragment>
+
     <fragment
         android:id="@+id/receiveFragment"
         android:name="dev.airon.bankfinance.presentation.ui.features.receive.ReceiveFragment"
