feature:correção de fluxo de deposito e recarga, garantindo valor correto na wallet do usuario

--- a/app/src/main/res/layout/bottomsheet_password_transaction.xml
+++ b/app/src/main/res/layout/bottomsheet_password_transaction.xml
@@ -11,23 +11,24 @@
         android:id="@+id/text_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="title"
+        tools:text="@string/txt_title"
         android:textSize="24sp"
-        android:textColor="@color/color_default"
+        android:textColor="@color/blue_final"
         android:gravity="center_horizontal" />
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?actionBarDivider"
-        android:layout_marginVertical="16dp"/>
+        android:layout_marginVertical="16dp"
+        android:contentDescription="@string/txt_bottom_sheet" />
 
 
     <TextView
         android:id="@+id/text_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="message"
+        tools:text="@string/txt_message"
         android:textColor="@color/black"
         android:gravity="center"/>
 
@@ -37,7 +38,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginBottom="10dp"
         android:drawableStart="@drawable/ic_lock_password_line"
-        android:hint="digite sua senha"
+        android:hint="@string/hint_digit_your_password"
         android:inputType="numberPassword" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -47,7 +48,7 @@
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="14dp"
         android:background="@drawable/bg_button_login"
-        tools:text="Entendi"
+        tools:text="@string/title_default_button_bottom_sheet"
         android:textColor="@color/white"
         android:textStyle="bold" />
 
