--- a/app/src/main/res/layout/credit_card_back_item.xml
+++ b/app/src/main/res/layout/credit_card_back_item.xml
@@ -28,7 +28,7 @@
             android:id="@+id/text_bank_branch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="AGÊNCIA"
+            android:text="@string/txt_branch"
             android:layout_marginStart="10dp"
             android:textSize="12sp"
             android:layout_marginTop="10dp"
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/inter_semibold"
-            android:text="1234"
+            android:text="@string/txt_branch_number"
             android:textColor="@android:color/white"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="@+id/text_bank_branch"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:fontFamily="@font/inter"
-            android:text="CONTA"
+            android:text="@string/txt_account"
             android:layout_marginBottom="10dp"
             android:textColor="@android:color/white"
             android:textSize="12sp"
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/inter_semibold"
-            android:text="1234567"
+            android:text="@string/txt_account_number"
             android:textColor="@android:color/white"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="@+id/text_account"
@@ -81,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:fontFamily="@font/inter"
-            android:text="CÓD. SEG."
+            android:text="@string/txt_cod_sec"
             android:textColor="@android:color/white"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@+id/text_account"
@@ -93,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:fontFamily="@font/inter_semibold"
-            android:text="123"
+            android:text="@string/txt_cod_sec_number"
             android:textColor="@android:color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/text_account_number"
@@ -105,6 +105,7 @@
             android:id="@+id/image_logo"
             android:layout_width="48dp"
             android:layout_height="48dp"
+            android:contentDescription="@string/description_logo_in_credit_card"
             android:src="@drawable/logo_app_bf"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp"
@@ -116,7 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/inter_semibold"
-            android:text="CRÉDITO"
+            android:text="@string/txt_credit_card"
             android:textColor="@android:color/white"
             android:textSize="12sp"
             android:layout_marginTop="10dp"
