--- a/app/src/main/res/layout/credit_card_front_item.xml
+++ b/app/src/main/res/layout/credit_card_front_item.xml
@@ -19,6 +19,7 @@
             android:layout_height="42dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:contentDescription="@string/description_logo_in_credit_card"
             android:src="@drawable/logo_app_bf"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:fontFamily="@font/inter_bold"
-            android:text="BF Credit Card"
+            android:text="@string/title_credit_card"
             android:textColor="@android:color/white"
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
@@ -40,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/inter"
-            android:text="crédito"
+            android:text="@string/txt_credit_card"
             android:textColor="@android:color/white"
             android:layout_marginEnd="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView4"
@@ -55,7 +56,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/inter_bold"
-            android:text="1234 4567 8901 2345"
+            android:text="@string/txt_number_card"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +66,7 @@
             android:id="@+id/credit_card_valid_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="01/36"
+            android:text="@string/txt_date_card"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:layout_marginEnd="16dp"
@@ -80,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:fontFamily="@font/inter_bold"
-            android:text="Nome do Titular"
+            android:text="@string/txt_name_user_card"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:layout_marginTop="24dp"
