--- a/app/src/main/res/layout/fragment_credit_card.xml
+++ b/app/src/main/res/layout/fragment_credit_card.xml
@@ -65,7 +65,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp"
                 android:backgroundTint="@color/color_card_secondary"
-                android:text="Pagar fatura"
+                android:text="@string/title_button_payment_credit_card"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +78,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/inter"
-                android:text="Limite disponível:"
+                android:text="@string/txt_limit_credit_card"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +92,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/inter_bold"
-                android:text="0,00"
+                android:text="@string/txt_limit_value"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/text_available_limit"
@@ -105,7 +105,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/inter"
-                android:text="Saldo Cartão:"
+                android:text="@string/txt_balance_credit_card"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -117,7 +117,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_bold"
-                android:text="0,00"
+                android:text="@string/txt_balance_credit_card_value"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@+id/text_available_limit_value"
@@ -133,12 +133,26 @@
                 android:visibility="invisible"
                 tools:visibility="visible"
                 android:layout_marginTop="16dp"
-                android:text="Error ao encontrar o cartão de crédito"
+                android:text="@string/txt_information_error_credit_card"
                 android:textColor="@color/red"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_available_balance_value" />
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginVertical="16dp"
+                android:indeterminateTint="@color/color_default"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:visibility="visible" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
