--- a/app/src/main/res/layout/fragment_extract.xml
+++ b/app/src/main/res/layout/fragment_extract.xml
@@ -37,7 +37,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Extrato"
+                    android:text="@string/title_extract"
                     android:textColor="@color/color_default"
                     android:textSize="32sp"
                     android:textStyle="bold" />
@@ -76,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="Você ainda não realizou nenhuma transação."
+            android:text="@string/txt_information_transaction_empty"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="16sp"
