--- a/app/src/main/res/layout/fragment_credit_card_receipt.xml
+++ b/app/src/main/res/layout/fragment_credit_card_receipt.xml
@@ -6,9 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_deposit_receipt_top"
     android:fillViewport="true"
-
-    tools:context=".presentation.ui.features.deposit.DepositReceiptFragment">
-
+    tools:context=".presentation.ui.features.creditCard.CreditCardReceiptFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -57,8 +55,8 @@
                 android:id="@+id/img_success"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/ic_checked"
                 android:contentDescription="@string/description_icon_transaction_success"
+                android:src="@drawable/ic_checked"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_semibold"
-                android:text="@string/txt_transfer_success"
+                android:text="@string/txt_payment_credit_card_success"
                 android:textAlignment="center"
                 android:textColor="@color/color_deposit_confirm"
                 android:textSize="22sp"
@@ -79,6 +77,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_success" />
 
+            <TextView
+                android:id="@+id/text_subTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/inter"
+                android:text="@string/txt_information_credit_card_balance"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_title" />
 
             <TextView
                 android:id="@+id/text_information_recharge_detail"
@@ -86,15 +97,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:fontFamily="@font/inter_bold"
-                android:text="@string/txt_transaction_details"
+                android:text="@string/txt_information_details_payment_credit_card"
                 android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@+id/text_title"
+                app:layout_constraintTop_toBottomOf="@+id/text_subTitle"
                 tools:layout_editor_absoluteX="16dp" />
 
 
             <!--            Date Transaction-->
             <TextView
-                android:id="@+id/date_recharge"
+                android:id="@+id/date_deposit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -104,7 +115,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/text_information_recharge_detail" />
 
             <TextView
-                android:id="@+id/text_date_transaction"
+                android:id="@+id/text_date_payment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -123,156 +134,68 @@
                 android:text="@string/txt_hour"
                 android:textColor="@color/blue_final"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/date_recharge" />
+                app:layout_constraintTop_toBottomOf="@+id/text_date_payment" />
 
             <TextView
-                android:id="@+id/text_hour_transaction"
+                android:id="@+id/text_hour_payment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/inter_semibold"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_date_transaction"
+                app:layout_constraintTop_toBottomOf="@+id/text_date_payment"
                 tools:text="@string/txt_hour_number" />
 
             <!--            Code Transaction-->
             <TextView
-                android:id="@+id/text_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="@string/txt_cod_transaction"
+                android:text="@string/txt_cod_payment"
                 android:textColor="@color/blue_final"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_hour" />
 
             <TextView
-                android:id="@+id/text_code_transaction"
+                android:id="@+id/text_code_payment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/inter_semibold"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_hour_transaction"
-                tools:text="jkhjnbdjibdvk541512241" />
+                app:layout_constraintTop_toBottomOf="@+id/text_hour_payment"
+                tools:text="541512241" />
 
             <View
                 android:id="@+id/view"
                 android:layout_width="match_parent"
-                android:background="@color/black"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/text_code_transaction"
+                app:layout_constraintTop_toBottomOf="@+id/text_code_payment"
                 tools:layout_editor_absoluteX="16dp" />
 
-            <!--           Recipient User-->
+            <!--            Code Transaction-->
             <TextView
-                android:id="@+id/text_user_recipient"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="@string/txt_recipient"
-                android:layout_marginVertical="10dp"
+                android:text="Valor do Pagamento"
                 android:textColor="@color/blue_final"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view" />
 
             <TextView
-                android:id="@+id/text_user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/inter_semibold"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toTopOf="@+id/text_value"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/text_user_recipient"
-                tools:text="@string/txt_user" />
-
-            <!--           Value Transaction-->
-            <TextView
-                android:id="@+id/text_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/txt_transaction_value"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/blue_final"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_user_recipient" />
-
-            <TextView
-                android:id="@+id/text_amount_transaction"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/inter_semibold"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="@+id/text_value"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/text_value"
-                tools:text="@string/txt_transaction_value_number" />
-
-            <!--            Key Pix-->
-            <TextView
-                android:id="@+id/text_key_pix"
+                android:id="@+id/text_amount_payment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="@string/txt_key_pix"
-                android:textColor="@color/blue_final"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_value" />
-
-            <TextView
-                android:id="@+id/text_value_key_pix"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_semibold"
                 android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="@+id/text_key_pix"
-
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/text_key_pix"
-                tools:text="@string/txt_key_pix_number" />
-
- <!--            Method Payment-->
-            <TextView
-                android:id="@+id/text_type_method"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="@string/txt_payment_type"
-                android:textColor="@color/blue_final"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_key_pix" />
-
-            <TextView
-                android:id="@+id/text_method_payment_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/inter_semibold"
-
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="@+id/text_type_method"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/text_type_method"
-                tools:text="@string/txt_payment_type_value" />
-
-            <ProgressBar
-                android:id="@+id/progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginVertical="16dp"
-                android:layout_marginTop="403dp"
-                android:indeterminateTint="@color/color_default"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/text_information_recharge_detail"
-                tools:visibility="visible" />
+                app:layout_constraintTop_toBottomOf="@+id/view"
+                tools:text="@string/txt_value_transaction_number" />
 
 
             <androidx.appcompat.widget.AppCompatButton
@@ -293,5 +216,5 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </ScrollView>
+
