--- a/app/src/main/res/layout/fragment_deposit.xml
+++ b/app/src/main/res/layout/fragment_deposit.xml
@@ -11,7 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -45,7 +45,7 @@
                         android:layout_marginBottom="32dp"
                         android:fontFamily="@font/inter_semibold"
                         android:gravity="center_horizontal"
-                        android:text="Depositar"
+                        android:text="@string/title_deposit_fragment"
                         android:textColor="@color/white"
                         android:textSize="22sp"
                         android:textStyle="bold" />
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
                 android:fontFamily="@font/inter_bold"
-                android:text="Informe o valor a ser depositado"
+                android:text="@string/txt_information_deposit_value"
                 android:textAlignment="center"
                 android:textColor="@color/color_default"
                 android:textSize="16sp"
@@ -86,7 +86,7 @@
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="32dp"
                 android:fontFamily="@font/inter_semibold"
-                android:text="Valor do depósito"
+                android:text="@string/txt_value_deposit"
                 android:textAlignment="center"
                 android:textColor="@color/color_default"
                 android:textSize="16sp"
@@ -103,7 +103,7 @@
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="16dp"
                 android:backgroundTint="@color/color_default"
-                android:hint="R$0,00"
+                android:hint="@string/txt_value_deposit_number"
                 android:inputType="number"
                 android:textAlignment="center"
                 android:textColor="@color/color_default"
@@ -122,8 +122,7 @@
                 android:layout_margin="24dp"
                 android:layout_marginHorizontal="24dp"
                 android:background="@drawable/bg_button_login"
-
-                android:text="Confirmar"
+                android:text="@string/txt_button_confirm"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toTopOf="@+id/progress_bar"
                 app:layout_constraintEnd_toEndOf="parent"
