--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:baselineAligned="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
                 android:backgroundTint="@color/white"
-                android:contentDescription="botão de logout"
-
+                android:contentDescription="@string/txt_description_button_logout"
                 android:src="@drawable/ic_logout"
                 app:layout_constraintBottom_toBottomOf="@+id/text_title"
                 app:layout_constraintEnd_toEndOf="parent"
