--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -12,15 +12,14 @@
         tools:layout="@layout/fragment_splash" >
         <action
             android:id="@+id/action_splashFragment_to_authentication"
-            app:destination="@id/authentication"
-            />
+            app:destination="@id/authentication" />
         <action
             android:id="@+id/action_splashFragment_to_homeFragment"
             app:destination="@id/homeFragment"
             app:popUpToInclusive="true"
-            app:popUpTo="@id/splashFragment"
-            />
+            app:popUpTo="@id/splashFragment"/>
     </fragment>
+
     <fragment
         android:id="@+id/homeFragment"
         android:name="dev.airon.bankfinance.presentation.ui.home.HomeFragment"
@@ -53,14 +52,14 @@
             android:id="@+id/action_homeFragment_to_transferReceiptFragment"
             app:destination="@id/transferReceiptFragment" />
         <action
-            android:id="@+id/action_homeFragment_to_transferReceiptFragment2"
-            app:destination="@id/transferReceiptFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_rechargeReceiptFragment2"
-            app:destination="@id/rechargeReceiptFragment" />
+            android:id="@+id/action_homeFragment_to_creditCardReceiptFragment"
+            app:destination="@id/creditCardReceiptFragment" />
     </fragment>
-    <navigation android:id="@+id/authentication"
+
+    <navigation
+        android:id="@+id/authentication"
         app:startDestination="@id/loginFragment">
+
         <fragment
             android:id="@+id/loginFragment"
             android:name="dev.airon.bankfinance.presentation.ui.auth.login.LoginFragment"
@@ -73,11 +72,13 @@
                 android:id="@+id/action_loginFragment_to_recoverFragment"
                 app:destination="@id/recoverFragment" />
         </fragment>
+
         <fragment
             android:id="@+id/registerFragment"
             android:name="dev.airon.bankfinance.presentation.ui.auth.register.RegisterFragment"
             android:label="fragment_register"
             tools:layout="@layout/fragment_register" />
+
         <fragment
             android:id="@+id/recoverFragment"
             android:name="dev.airon.bankfinance.presentation.ui.auth.recover.RecoverFragment"
@@ -90,12 +91,14 @@
                 android:id="@+id/action_recoverFragment_to_loginFragment"
                 app:destination="@id/loginFragment" />
         </fragment>
+
         <action
             android:id="@+id/action_global_homeFragment"
             app:destination="@id/homeFragment"
             app:popUpToInclusive="true"
             app:popUpTo="@id/loginFragment"/>
     </navigation>
+
     <fragment
         android:id="@+id/rechargeFragment"
         android:name="dev.airon.bankfinance.presentation.ui.features.recharge.RechargeFragment"
@@ -104,12 +107,13 @@
         <action
             android:id="@+id/action_rechargeFragment_to_rechargeReceiptFragment"
             app:destination="@id/rechargeReceiptFragment"
-            app:popUpTo="@id/rechargeFragment"
-            app:popUpToInclusive="true" />
+            app:popUpToInclusive="true"
+            app:popUpTo="@id/rechargeFragment" />
         <action
             android:id="@+id/action_rechargeFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/depositFragment"
         android:name="dev.airon.bankfinance.presentation.ui.features.deposit.DepositFormFragment"
@@ -124,6 +128,7 @@
             app:popUpToInclusive="true"
             app:popUpTo="@id/depositFragment"/>
     </fragment>
+
     <fragment
         android:id="@+id/profileFragment"
         android:name="dev.airon.bankfinance.presentation.ui.profile.ProfileFragment"
@@ -133,6 +138,7 @@
             android:id="@+id/action_profileFragment_to_authentication"
             app:destination="@id/authentication" />
     </fragment>
+
     <fragment
         android:id="@+id/transferFragment"
         android:name="dev.airon.bankfinance.presentation.ui.features.transfer.TransferFragment"
@@ -145,6 +151,7 @@
             android:id="@+id/action_transferFragment_to_transferReceiptFragment"
             app:destination="@id/transferReceiptFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/depositReceiptFragment"
         android:name="dev.airon.bankfinance.presentation.ui.features.deposit.DepositReceiptFragment"
@@ -153,7 +160,13 @@
         <argument
             android:name="idDeposit"
             app:argType="string" />
+        <action
+            android:id="@+id/action_depositReceiptFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
+
     <fragment
         android:id="@+id/extractFragment"
         android:name="dev.airon.bankfinance.presentation.ui.features.extract.ExtractFragment"
@@ -165,38 +178,82 @@
         <action
             android:id="@+id/action_extractFragment_to_rechargeReceiptFragment"
             app:destination="@id/rechargeReceiptFragment" />
+        <action
+            android:id="@+id/action_extractFragment_to_creditCardReceiptFragment"
+            app:destination="@id/creditCardReceiptFragment" />
+        <action
+            android:id="@+id/action_extractFragment_to_transferReceiptFragment"
+            app:destination="@id/transferReceiptFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/rechargeReceiptFragment"
         android:name="dev.airon.bankfinance.presentation.ui.features.recharge.RechargeReceiptFragment"
-        android:label="RechargeReceiptFragment" >
+        android:label="fragment_recharge_receipt"
+        tools:layout="@layout/fragment_recharge_receipt">
         <argument
             android:name="IdRecharge"
             app:argType="string" />
+        <action
+            android:id="@+id/action_rechargeReceiptFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
+
     <fragment
         android:id="@+id/creditCardFragment"
         android:name="dev.airon.bankfinance.presentation.ui.features.creditCard.CreditCardFragment"
         android:label="fragment_credit_card"
-        tools:layout="@layout/fragment_credit_card" />
+        tools:layout="@layout/fragment_credit_card" >
+        <action
+            android:id="@+id/action_creditCardFragment_to_creditCardReceiptFragment"
+            app:destination="@id/creditCardReceiptFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/creditCardReceiptFragment"
+        android:name="dev.airon.bankfinance.presentation.ui.features.creditCard.CreditCardReceiptFragment"
+        android:label="fragment_credit_card_receipt"
+        tools:layout="@layout/fragment_credit_card_receipt">
+        <argument
+            android:name="cardId"
+            app:argType="string"
+            app:nullable="false"/>
+        <argument
+            android:name="amountPaid"
+            app:argType="float" />
+        <action
+            android:id="@+id/action_creditCardReceiptFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+
     <fragment
         android:id="@+id/walletFragment"
         android:name="dev.airon.bankfinance.presentation.ui.wallet.WalletFragment"
         android:label="fragment_wallet"
         tools:layout="@layout/fragment_wallet" />
+
     <fragment
         android:id="@+id/transferReceiptFragment"
-        android:name="dev.airon.bankfinance.presentation.ui.features.transfer.TransferReceiptFragment" >
+        android:name="dev.airon.bankfinance.presentation.ui.features.transfer.TransferReceiptFragment"
+        android:label="fragment_transfer_receipt"
+        tools:layout="@layout/fragment_transfer_receipt">
         <argument
             android:name="transactionPix"
             app:argType="dev.airon.bankfinance.domain.model.TransactionPix" />
         <action
             android:id="@+id/action_transferReceiptFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment
         android:id="@+id/receiveFragment"
         android:name="dev.airon.bankfinance.presentation.ui.features.receive.ReceiveFragment"
-        android:label="ReceiveFragment" />
+        android:label="fragment_receive" />
 </navigation>
+
